Updates to v1.8